--- a/app/src/main/res/menu/menu_lugar_borrarfav.xml
+++ b/app/src/main/res/menu/menu_lugar_borrarfav.xml
@@ -8,6 +8,6 @@
 
 
     <item
-        android:id="@+id/anyadirAFavs"
-        android:title="Añadir a favoritos" />
+        android:id="@+id/borrarLugarFav"
+        android:title="Borrar de favoritos" />
 </menu>
