--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -29,7 +29,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:src="@android:drawable/ic_menu_camera"
+        android:src="@android:drawable/ic_menu_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:backgroundTint="#1F0404"/>
