--- a/app/src/main/res/layout/activity_nuevo_lugar.xml
+++ b/app/src/main/res/layout/activity_nuevo_lugar.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".NuevoLugar">
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminateTint="@android:color/holo_blue_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.718" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
