Cambio menor a interfaz del nuevo lugar

--- a/app/src/main/res/layout/activity_nuevo_lugar.xml
+++ b/app/src/main/res/layout/activity_nuevo_lugar.xml
@@ -11,20 +11,20 @@
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/background_dark"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/background_dark"
-        android:background="@android:color/background_dark"/>
+        app:srcCompat="@android:color/background_dark" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="104dp"
         android:background="#333333"
@@ -35,7 +35,6 @@
         android:textColor="@android:color/white"
         android:textColorHint="#9C9C9C"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -44,16 +43,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/anyadirFotoBoton"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="Añadir"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:background="#222222"
+        android:text="Añadir"
         android:textColor="#afafaf"
         app:layout_constraintBottom_toBottomOf="@+id/cancelarFoto"
         app:layout_constraintEnd_toStartOf="@+id/cancelarFoto"
@@ -61,15 +66,16 @@
 
     <Button
         android:id="@+id/cancelarFoto"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="62dp"
-        android:text="Cancelar"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="48dp"
         android:background="#222222"
+        android:text="Cancelar"
         android:textColor="#afafaf"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/anyadirFotoBoton"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <ProgressBar
